--- a/templates/notify_list/index.html.twig
+++ b/templates/notify_list/index.html.twig
@@ -1,20 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello NotifyListController!{% endblock %}
+{% block title %}Notify Me!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h2>Register to be notified when you can join!</h2>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/Users/gregorysuehr/dev/katzen/src/Controller/NotifyListController.php</code></li>
-        <li>Your template at <code>/Users/gregorysuehr/dev/katzen/templates/notify_list/index.html.twig</code></li>
-    </ul>
-</div>
+    {% for recipient in recipients %}
+        <h4>{{ recipient }}</h4>
+    {% endfor %}
 {% endblock %}
