Add item form at /item, including migration to drop redundant

--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello RecipeController!{% endblock %}
+{% block title %}Recipe Dashboard{% endblock %}
 
 {% block body %}
 <style>
@@ -9,12 +9,15 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Recipe Dashboard</h1>
 
-    This friendly message is coming from:
+    This is the prototype dashboard for the Katzen Recipe Manager. Over time, features will be added to this list:
     <ul>
-        <li>Your controller at <code>/Users/gregorysuehr/dev/katzen/src/Controller/RecipeController.php</code></li>
-        <li>Your template at <code>/Users/gregorysuehr/dev/katzen/templates/recipe/index.html.twig</code></li>
+      <li>Add Item (in progress!)</li>
+      <li>View Item</li>
+      <li>View Recipe</li>
+      <li>Add Recipe</li>
+      <li>...and probably more!</li>
     </ul>
 </div>
 {% endblock %}
