--- a/templates/recipe_features.html.twig
+++ b/templates/recipe_features.html.twig
@@ -4,29 +4,28 @@
 
 {% block body %}
 <div class="recipe-feature">
-  <div class="hero position-relative text-center">
-    <img src="{{ asset('images/recipe-feature_big.jpg') }}" alt="Recipe Image" class="splash-image">
+  <div class="hero d-flex flex-column justify-content-center align-items-center text-center text-white">
+    <img src="{{ asset('images/recipe-feature_big.jpg') }}" alt="Recipe Image" class="splash-image img-fluid w-100 h-auto">
   </div>
-  <div class="position-absolute bottom-0 start-50 translate-middle-x container text-center mt-5">
+
+  <div class="container text-center mt-5">
     <div class="row">
-      <div class="col-md-4">
-	<div class="feature p-3 border rounded bg-light">
-          <img src="{{ asset('images/recipe-feature.jpg') }}" alt="Recipe Image" class="splash-image">
-           <h4>Jimmy Dean's Sausage Quiche</h4>
+      <div class="col-md-4 col-12 mb-3">
+        <div class="feature p-3 border rounded bg-light">
+          <img src="{{ asset('images/recipe-feature.jpg') }}" alt="Recipe Image" class="img-fluid w-100 h-auto">
+          <h4>Jimmy Dean's Sausage Quiche</h4>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-12 mb-3">
         <div class="feature p-3 border rounded bg-light">
-          <img src="{{ asset('images/recipe-subfeature-1.jpg') }}" alt="Recipe Image"></img>
+          <img src="{{ asset('images/recipe-subfeature-1.jpg') }}" alt="Recipe Image" class="img-fluid w-100 h-auto">
           <h4>Kale Garden Breakfast Pile</h4>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-12 mb-3">
         <div class="feature p-3 border rounded bg-light">
-          <img src="{{ asset('images/recipe-subfeature-2.jpg') }}" alt="Recipe Image"></img>       
-          <div class="feature p-3 border rounded bg-light">
-            <h4>Pesto Farfalle with Tomato</h4>
-          </div>
+          <img src="{{ asset('images/recipe-subfeature-2.jpg') }}" alt="Recipe Image" class="img-fluid w-100 h-auto">
+          <h4>Pesto Farfalle with Tomato</h4>
         </div>
       </div>
     </div>
