--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,7 +46,15 @@
         </header>
 
         <main role="main" class="container mt-5">
-            {% block body %}{% endblock %}
+          {% for label, messages in app.flashes %}
+          <div class="alert alert-{{ label }}">
+            {% for message in messages %}
+            <p>{{ message }}</p>
+            {% endfor %}
+          </div>
+          {% endfor %}
+          
+          {% block body %}{% endblock %}
         </main>
 
         <footer class="mt-7 px-3 py-5 text-center text-muted">
