Start of RecipeBuilderType

--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -13,6 +13,7 @@
 
     This is the prototype dashboard for the Katzen Recipe Manager. Over time, features will be added to this list:
     <ul>
+      <li><a href="{{ path('app_recipe_build') }}">Build Recipe</a></li>      
       <li><a href="{{ path('app_recipe_import') }}">Import Recipe</a></li>
       <li><a href="{{ path('app_recipe_list') }}">View Recipes</a></li>
       <li><a href="{{ path('app_item') }}">View Item Catalog</a></li>
