Profile style tweaks

--- a/templates/profile/overview.html.twig
+++ b/templates/profile/overview.html.twig
@@ -4,17 +4,11 @@
 
 {% block content %}
 <section class="hero-section">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-md-6 text-content">
-                <h1>I'm Greg</h1>
-                <p class="intro">I wrote code and other thigns.</p>
-            </div>
-            <div class="col-md-6 text-center">
-                <img src="{{ asset('images/pittsburgh-warm_jordan-faux-unsplash.jpg') }}" class="img-fluid hero-image">
-            </div>
-        </div>
-    </div>
+  <div class="container">
+    <h1><strong>I'm Greg</strong></h1>
+    <p class="intro">I wrote code and other things.</p>
+    <img src="{{ asset('images/pittsburgh-warm_small_jordan-faux-unsplash.jpg') }}" class="img-fluid hero-image section">
+  </div>
 </section>
 
 <section class="summary-section">
@@ -33,24 +27,24 @@
   </div>
 </section>
 
-<section class="highlight-section">
+<section class="section highlight-section">
   <div class="container">
     <div class="row">
       <h4>Work With Me</h4>
     </div>
     <div class="row">
       <div class="col-md-4 text-center">
-        <img src="{{ asset('images/consulting_scott-graham-unsplash.jpg') }}" class="img-fluid">
+        <img src="{{ asset('images/consulting_short_scott-graham-unsplash.jpg') }}" class="img-fluid">
         <h3>Consulting Services</h3>        
         <p>Development, design, and consultation.
       </div>
       <div class="col-md-4 text-center">
-        <img src="{{ asset('images/writing-feature-warm_mikhail-pavstyuk-unsplash.jpg') }}" class="img-fluid">
+        <img src="{{ asset('images/writing-feature-warm_small_mikhail-pavstyuk-unsplash.jpg') }}" class="img-fluid">
         <h3>Creative Collaborations</h3>
         <p>Work with me to refine your projects.</p>
       </div>
       <div class="col-md-4 text-center">
-        <img src="{{ asset('images/blog-feature-clutter_clay-banks-unsplash.jpg') }}" class="img-fluid">
+        <img src="{{ asset('images/blog-feature-clutter_small_clay-banks-unsplash.jpg') }}" class="img-fluid">
         <h3>Other Projects</h3>
         <p>Have an interesting? Let's talk!</p>
       </div>
