--- a/templates/profile/landing.html.twig
+++ b/templates/profile/landing.html.twig
@@ -3,22 +3,18 @@
 {% block title %}Greg Suehr{% endblock %}
 
 {% block content %}
-<section class="hero-section">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-md-6 text-content">
-                <h1>Hello</h1>
-                <p class="intro">I'm Greg, and this is my personal website and professional portfolio.</p>
-                <a href="{{ path('profile_contact') }}" class="btn btn-primary">Get In Touch</a>
-            </div>
-            <div class="col-md-6 text-center">
-                <img src="{{ asset('images/profile-welcome-bold_mingjun-liu-unsplash.jpg') }}" alt="Hero Image" class="img-fluid hero-image">
-            </div>
-        </div>
+<section class="section hero-section">
+  <div class="card">
+    <img src="{{ asset('images/profile-welcome-bold_small_mingjun-liu-unsplash.jpg') }}" class="card-img img-fluid hero-image"/>
+    <div class="card-img-overlay">
+      <h1><strong>Hello</strong></h1>
+      <p class="intro">I'm Greg, and this is my personal website and professional portfolio.</p>
+      <a href="{{ path('profile_contact') }}" class="btn btn-primary">Get In Touch</a>
     </div>
+  </div>
 </section>
 
-<section class="about-section bg-light">
+<section class="section about-section">
     <div class="container">
         <div class="row">
             <div class="col-md-6 text-content">
@@ -33,62 +29,70 @@
     </div>
 </section>
 
-<section class="highlight-section">
+<section class="section highlight-section">
   <div class="container">
-    <h2 class="text-left">Technology</h2>
-    <div class="row">
-      <div class="col-md-4 text-left">
-        <img src="{{ asset('images/katzen-feature-bold_toa-heftiba-unsplash.jpg') }}" class="img-fluid">
+    <div class="row section">
+      <h2 class="text-left">Software</h2>
+      <div class="col-md-6 text-left">
+        <br>
+        <img src="{{ asset('images/katzen-feature-bold_small_toa-heftiba-unsplash.jpg') }}" class="img-fluid">
+        <br></br>
         <h4>Kitchen Management</h4>
-        <p>Katzen is a friendly, capable set of tools designed to helps culinary professionals track inventory, manage recipes</p>
+        <p class="text-left text-secondary-dark">Katzen is a friendly, capable set of tools designed to helps culinary professionals track inventory, manage recipes</p>
       </div>
-      <div class="col-md-4 text-left">
-        <img src="{{ asset('images/eclipse_jongsun-lee-unsplash.jpg') }}" class="img-fluid">
+      <div class="col-md-6 text-left">
+        <br>
+        <img src="{{ asset('images/eclipse_small_jongsun-lee-unsplash.jpg') }}" class="img-fluid">
+        <br></br>
         <h4>Physics Simulations</h4>
-        <p>We got games! Check out a set lightweight physics simulations created with Three.Js, alongside other neat tools!</p>
+        <p class="text-left text-secondary-dark">We got games! Check out a set lightweight physics simulations created with Three.Js, alongside other neat tools!</p>
       </div>
     </div>
-    <div class="row align-items-center">
-      <div class="col-md-4 text-content">
-        <div class="col-md-4 text-left">
-          <h2 class="text-left">Consulting</h2>
-        </div>
+    <hr>
+    <div class="row section align-items-center">
+      <div class="col-md-6 text-content">
+        <h2 class="text-left">Consulting</h2>
+        <br>
         <div>
           <h4>Development Support</h4>
-          <p class="text-left">Hire me to help you create technology that’s capable, reliable, and built for people.</p>
+          <p class="text-left text-secondary-dark">Hire me to help you create technology that’s capable, reliable, and built for people.</p>
         </div>
         <div>
           <h4>Design Services</h4>
-          <p class="text-left">Web development and design audits.</p>
+          <p class="text-left text-secondary-dark">Web development and design audits.</p>
         </div>
         <div>
           <h4>Process Consulting</h4>
-          <p class="text-left">Practical advice and resources for technologists and other businesses.</p>
+          <p class="text-left text-secondary-dark">Practical advice and resources for technologists and other businesses.</p>
         </div>
         <div>
           <h4>Sustainable Growth</h4>
-          <p class="text-left">Systems and advising to help you design sustainable projects with long-term impact.</p>
+          <p class="text-left text-secondary-dark">Systems and advising to help you design sustainable projects with long-term impact.</p>
         </div>
         <div>
           <a href="{{ path('profile_contact') }}" class="btn btn-secondary">Get in Touch</a>
         </div>
       </div>
-      <div class="col-md-4">
-        <img src="{{ asset('images/consulting_scott-graham-unsplash.jpg') }}" class="img-fluid">
+      <div class="col-md-6">
+        <img src="{{ asset('images/consulting_small_scott-graham-unsplash.jpg') }}" class="img-fluid">
       </div>
-      <h2 class="text-left">Writing</h2>
-      <div class="row">
-        <div class="col-md-4 text-center">
-          <img src="{{ asset('images/writing-feature-warm_mikhail-pavstyuk-unsplash.jpg') }}" class="img-fluid">
-          <h3>Plays and Poems</h3>
-          <p>Read from a selection of my work! Purchase scripts, chapbooks, and stickers.</p>
-        </div>
-        <div class="col-md-4 text-center">
-          <img src="{{ asset('images/blog-feature-clutter_clay-banks-unsplash.jpg') }}" class="img-fluid">
-          <h3>Blog</h3>
-          <p>Reflections on classic essays and stories, translations, and more!</p>
-        </div>
-      </div>        
     </div>
+    <hr>
+    <div class="row section align-items-center">
+      <h2 class="text-left">Writing</h2>
+      <div class="row section">
+        <div class="col-md-6">
+          <img src="{{ asset('images/writing-feature-warm_small_mikhail-pavstyuk-unsplash.jpg') }}" class="img-fluid">
+          <h3>Plays and Poems</h3>
+          <p class="text-left text-secondary-dark">Read my work, or purchase scripts, books, and stickers.</p>
+        </div>
+        <div class="col-md-6">
+          <img src="{{ asset('images/blog-feature-clutter_small_clay-banks-unsplash.jpg') }}" class="img-fluid">
+          <h3>Blog</h3>
+          <p class="text-left text-secondary-dark">Reflections on classic essays and stories, translations, and more!</p>
+        </div>
+      </div>
+    </div>        
+  </div>
 </section>
 {% endblock %}
