--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -1,12 +1,53 @@
 {% extends 'profile_base.html.twig' %}
 
-{% block title %}Greg Suehr{% endblock %}
+{% block title %}Greg's Blog{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
     <h1 class="text-center mb-5">Blog</h1>
 
-    <div class="row">
+    <div class="section row">
+      <div class="col-md-6">
+        <div class="card">
+          {% if featured_post.featuredImage %}
+          <img src="{{ asset('uploads/blog/' ~ featured_post.featuredImage) }}" alt="{{ featured_post.title }}" class="card-img-top">
+          {% endif %}
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card-body">
+          <h1 class="card-title">
+            <a href="{{ path('profile_post', {'id': featured_post.id}) }}" class="text-dark text-decoration-none">
+              {{ featured_post.title }}
+            </a>
+          </h1>
+          <p class="card-text text-muted">
+            {{ featured_post.subtitle | raw }}
+          </p>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-1">
+                <i class="fa fa-clock-o" style="font-size: 24px;"></i>
+              </div>
+              <div class="col-md-2">
+                <a href="{{ path('profile_post', {'id': featured_post.id}) }}" class="btn btn-primary btn-sm">
+                  Read It
+                </a>
+              </div>
+              <div class="col-md-9">
+              </div>
+            </div>
+          </div>
+          <p>{{ featured_post.summary | raw }}<p>
+        </div>
+        <div class="card-footer text-muted">
+          Published on {{ featured_post.updatedAt|date('F d, Y') }}
+        </div>
+      </div>
+    </div>
+
+    
+    <div class="section row">
         {% for post in posts %}
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="card h-100 shadow-sm">
@@ -15,19 +56,19 @@
                     {% endif %}
                     <div class="card-body">
                         <h5 class="card-title">
-                            <a href="{{ path('app_blog_post', {'slug': post.slug}) }}" class="text-dark text-decoration-none">
+                            <a href="{{ path('profile_post', {'id': post.id}) }}" class="text-dark text-decoration-none">
                                 {{ post.title }}
                             </a>
                         </h5>
                         <p class="card-text text-muted">
-                            {{ post.summary|length > 120 ? post.summary|slice(0, 120) ~ '...' : post.summary }}
+                          {{ post.subtitle | raw }}
                         </p>
-                        <a href="{{ path('app_blog_post', {'slug': post.slug}) }}" class="btn btn-primary btn-sm">
+                        <a href="{{ path('profile_post', {'id': post.id}) }}" class="btn btn-primary btn-sm">
                             Read More
                         </a>
                     </div>
                     <div class="card-footer text-muted">
-                        Published on {{ post.publishedAt|date('F d, Y') }}
+                        Published on {{ post.updatedAt|date('F d, Y') }}
                     </div>
                 </div>
             </div>
