--- a/templates/profile_base.html.twig
+++ b/templates/profile_base.html.twig
@@ -5,8 +5,10 @@
     <title>{% block title %}Greg Suehr{% endblock %}</title>
     {% block stylesheets %}
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,500i,600,600i&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     {{ encore_entry_link_tags('app') }}
     <link href="profile.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="{{ asset('profile.css') }}">
     {% endblock %}
 </head>
 <body>
