Multi-form recipe builder, styling needed

--- a/templates/recipe/build.html.twig
+++ b/templates/recipe/build.html.twig
@@ -12,7 +12,7 @@
       {{ form_row(recipe_form.save) }}
       {{ form_row(recipe_form.title) }}
       <h4>How Many, How Long?</h4>
-      <div class="servings-selector" style="float:left">
+      <div class="servings-selector">
         {{ form_row(recipe_form.serving_min_qty) }}
         {{ form_row(recipe_form.serving_max_qty) }}
         {{ form_row(recipe_form.serving_unit) }}
