UX improvement to JSON recipe import, and mixed fraction twig helper

--- a/templates/recipe/show.html.twig
+++ b/templates/recipe/show.html.twig
@@ -9,7 +9,7 @@
     Ingredients:
     <ul>
       {% for ingredient in recipe_ingredients %}
-      <li>{{ ingredient.supplyLabel }}</li>
+      <li>{{ ingredient.supplyLabel }} - {{ ingredient.getQuantity | mixed_fraction }} {{ ingredient.getUnit }}</li>
       {% endfor %}
     </ul>
     
