--- a/templates/profile/overview.html.twig
+++ b/templates/profile/overview.html.twig
@@ -6,49 +6,16 @@
 <section class="hero-section">
   <div class="container">
     <h1><strong>I'm Greg</strong></h1>
-    <p class="intro">I wrote code and other things.</p>
+    <p class="intro">I write things.</p>
     <img src="{{ asset('images/pittsburgh-warm_small_jordan-faux-unsplash.jpg') }}" class="img-fluid hero-image section">
   </div>
 </section>
 
 <section class="summary-section">
   <div class="mx-auto" style="width: 600px;">
-    <p>I was born and raised in Pittsburgh, Pennsylvania, studied Physics and the History & Philosophy of Science at the University of Pittsburgh, and currently live in the city with my two cats (Stella and Percy).</p>
-    <p>My work is wide and weird, but for the most part, my professional life is spent writing software and helping others write better software.</p>
-    <p>When I was 12-or-so, a cousin handed me a Perl book. It went right on a shelf and I subsequently did not learn to code. Much later, I would get a job that sat me in front of a 1000-line C++ physics analysis on a CentOS system at a lab halfway across the word in Tsukuba, Japan. In the time-honored fashion, I bootstrapped the minimal technical knowledge I needed to be productive in the lab. After months of trying to make-the-computer-do-physics-again, I found myself enjoying making the computer work more than the physics.</p>
-    <p>After university, I took a job in software building financial applications in... Perl. I regret not reading that book. Building and maintaining clean, capable web applications continues to bring me joy nearly a decade later.</p>
-    <p>Controlling complexity is my edge. I enjoy a meditative flow diving into dusty corners of legacy code bases and hunting elusive bugs.</p>
-    <p>Besides putting hands on a codebase, I help people create better technology through a range of consulting services.</p>
-    <p>Software is the outcome of a social process, and attending to the systems around technology is crucial. Whether the product is a one-page portfolio site or a high-traffic marketplace, ensuring they are built with the mutable needs of people in focus is my priority. </p>
-    <p>Software for people creates legible environments where users know what is going on and feel control. Creating clear documentation, views to monitor system states, and workflows that allow for </p>
-    <p>Alongside my technical projects, I enjoy collaborating with writers, musicians, actors, and other creatives. Much of my time is spent writing poems, which you can read <a href="{{ path('profile_poems_read') }}">here</a> or check out some translations <a href="{{ path('profile_blog') }}">here.</a></p>
-    <p>I have several plays available on this site, and several projects in development. If you’d like to get an update when these larger projects are available, sign up for my not-a-newsletter mailing list <a href="{{ path('app_notify_list') }}">here.</a></p>
-    <p>If you’ve read this far, you should <a href="{{ path('profile_contact') }}">say hello</a>.</p>
+    <p></p>
   </div>
 </section>
 
-<section class="section highlight-section">
-  <div class="container">
-    <div class="row">
-      <h4>Work With Me</h4>
-    </div>
-    <div class="row">
-      <div class="col-md-4 text-center">
-        <img src="{{ asset('images/consulting_short_scott-graham-unsplash.jpg') }}" class="img-fluid">
-        <h3>Consulting Services</h3>        
-        <p>Development, design, and consultation.
-      </div>
-      <div class="col-md-4 text-center">
-        <img src="{{ asset('images/writing-feature-warm_small_mikhail-pavstyuk-unsplash.jpg') }}" class="img-fluid">
-        <h3>Creative Collaborations</h3>
-        <p>Work with me to refine your projects.</p>
-      </div>
-      <div class="col-md-4 text-center">
-        <img src="{{ asset('images/blog-feature-clutter_small_clay-banks-unsplash.jpg') }}" class="img-fluid">
-        <h3>Other Projects</h3>
-        <p>Have an interesting? Let's talk!</p>
-      </div>
-    </div>
-  </div>
 </section>
 {% endblock %}
