--- a/templates/profile/dark.html.twig
+++ b/templates/profile/dark.html.twig
@@ -7,7 +7,7 @@
     <div class="card-img-overlay">
       <h1><strong>Hello</strong></h1>
       <p class="intro">You are here early.</a>
-      <a href="{{ path('profile_landing') }}" class="btn btn-primary">Okay</a>
+      <a href="{{ path('hyperlink_index') }}" class="btn btn-primary">Okay.</a>
     </div>
   </div>
 </section>
