--- a/templates/hyper_link/prologue4.html.twig
+++ b/templates/hyper_link/prologue4.html.twig
@@ -7,7 +7,7 @@
             <p class="character-dialogue hidden">…!</p>
             <p class="character-dialogue hidden">G: Oh! Hi there. Are you on my website?</p>
         </div>
-        <div class="choices">
+        <div class="choices hidden">
             <a class="choice canonical" href="{{ path('hyperlink_jump', { nextNodeKey: 'prologue5' }) }}">Yes?</a>
             <a class="choice" href="{{ path('hyperlink_clear') }}">No.</a>
         </div>
@@ -41,44 +41,51 @@
     };
 
     function update(timestamp) {
-        if (!lastFrameTime) lastFrameTime = timestamp;
-
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-        ctx.drawImage(
-            gregSprite,
-            frameIndex * FRAME_WIDTH, WALK_ROW * FRAME_HEIGHT,
-            FRAME_WIDTH, FRAME_HEIGHT,
-            posX, posY,
-            FRAME_WIDTH, FRAME_HEIGHT
-        );
-
-        if (timestamp - lastFrameTime > frameDuration) {
-            frameIndex = (frameIndex + 1) % NUM_FRAMES;
-            lastFrameTime = timestamp;
-        }
-
-        posX -= moveSpeed;
-
-        if (animationActive && posX <= canvas.width / 2 - FRAME_WIDTH / 2) {
-            animationActive = false;
-            triggerDialogueEvent();
-        } else if (animationActive) {
-            requestAnimationFrame(update);
-        }          
+      if (!lastFrameTime) lastFrameTime = timestamp;
+      
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      
+      ctx.drawImage(
+        gregSprite,
+        frameIndex * FRAME_WIDTH, WALK_ROW * FRAME_HEIGHT,
+        FRAME_WIDTH, FRAME_HEIGHT,
+        posX, posY,
+        FRAME_WIDTH, FRAME_HEIGHT
+      );
+      
+      if (timestamp - lastFrameTime > frameDuration) {
+        frameIndex = (frameIndex + 1) % NUM_FRAMES;
+        lastFrameTime = timestamp;
+      }
+      
+      posX -= moveSpeed;
+      
+      if (animationActive && posX <= canvas.width / 2 - FRAME_WIDTH / 2) {
+        animationActive = false;
+        triggerDialogueEvent();
+      } else if (animationActive) {
+        requestAnimationFrame(update);
+      }          
       
       function triggerDialogueEvent() {
+        document.querySelectorAll('.character-dialogue')[1].classList.remove('hidden');
+
+        setTimeout(() => {
+          document.querySelectorAll('.character-dialogue')[2].classList.remove('hidden');
+        }, 2000);
+        
         playSequence([
           {row: 2, col: 0},
           {row: 2, col: 1},
           {row: 2, col: 2},
           {row: 2, col: 1},
           {row: 2, col: 0}
-        ], 200, () => {
-        document.querySelectorAll('.hidden').forEach(el => {
-            el.classList.remove('hidden');
-        });
-        });
+        ], 200
+        );
+
+        setTimeout(() => {
+          document.querySelectorAll('.choices')[0].classList.remove('hidden');
+        }, 2000);
       }
       
       function playSequence(frames, duration, onComplete) {
