--- a/templates/hyper_link/story.html.twig
+++ b/templates/hyper_link/story.html.twig
@@ -1,6 +1,8 @@
 {% extends 'hyper_link/base.html.twig' %}
 
 {% block content %}
+{% if showCanvas %}
 <canvas id="screen" width="800" height="400" style="background: #000;"></canvas>
+{% endif %}
 {% include 'hyper_link/' ~ storyNodeKey ~ '.html.twig' %}
 {% endblock %}
